--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "homepage": "https://github.com/idiocc/multer#readme",
   "devDependencies": {
+    "@goa/busboy": "^1.1.0",
     "alamode": "^2.3.4",
     "documentary": "^1.27.4",
     "eslint-config-artdeco": "1.0.1",
