--- a/package.json
+++ b/package.json
@@ -40,16 +40,21 @@
   },
   "homepage": "https://github.com/idiocc/multer#readme",
   "devDependencies": {
+    "@contexts/http": "^1.4.0",
     "@goa/append-field": "^1.0.0",
     "@goa/busboy": "^1.1.0",
+    "@goa/koa": "^1.1.3",
     "@goa/type-is": "^1.0.1",
+    "@idio/dicer": "^1.0.2",
     "@typedefs/goa": "^0.0.2",
     "@wrote/ensure-path": "^1.1.0",
+    "@wrote/read": "^1.0.4",
     "@wrote/rm": "^1.1.5",
     "alamode": "^2.3.4",
     "catchment": "^3.3.0",
     "documentary": "^1.27.4",
     "eslint-config-artdeco": "1.0.1",
+    "temp-context": "^2.1.3",
     "yarn-s": "1.1.0",
     "zoroaster": "^4.1.1-alpha"
   }
