--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "doc": "NODE_DEBUG=doc doc -o README.md",
     "b": "alamode src -o build -s",
     "d": "yarn-s d1 externs",
-    "d1": "typal types/index.js src -c -t types/index.xml",
+    "d1": "typal src/index.js types/index.js -c -t types/index.xml",
     "externs": "typal types/externs.js",
     "build": "yarn-s d b doc",
     "e": "alanode"
