--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "test": "yarn t test/spec test/mask",
     "spec": "yarn t test/spec",
     "mask": "yarn t test/mask",
-    "depack": "depack-dev src/depack -o depack -a -l -p --externs types/externs.js --hide_warnings_for node_modules/events --hide_warnings_for node_modules/http",
+    "depack": "depack-dev src/depack -o depack -a -s -l -p --externs types/externs.js --hide_warnings_for node_modules/events --hide_warnings_for node_modules/http",
     "test-build": "ALAMODE_ENV=test-build yarn test",
     "lint": "eslint .",
     "doc": "NODE_DEBUG=doc doc -o README.md",
     "b": "alamode src -o build -s",
     "d": "yarn-s d1 externs",
-    "d1": "typal src/index.js types/index.js -c -t types/index.xml",
+    "d1": "typal depack/index.js src/index.js types/index.js -c -t types/index.xml",
     "externs": "typal types/externs.js",
     "build": "yarn-s d b doc",
     "e": "alanode"
