--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,7 +29,7 @@
       "program": "${workspaceFolder}/node_modules/.bin/alanode",
       "console": "integratedTerminal",
       "args": [
-        "example/array"
+        "example/fields"
       ],
       "skipFiles": [
         "<node_internals>/**/*.js"
