--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "test": "yarn t test/spec test/mask",
     "spec": "yarn t test/spec",
     "mask": "yarn t test/mask",
-    "depack": "depack-dev src/depack -o depack -a -s -l -p --externs types/externs.js --hide_warnings_for node_modules/events --hide_warnings_for node_modules/http",
-    "test-build": "ALAMODE_ENV=test-build yarn test",
+    "lib": "depack src/depack -o compile/form-data.js -a -s -c -p --source_map_include_content --externs http",
+    "test-compile": "ALAMODE_ENV=test-compile yarn test",
     "lint": "eslint .",
-    "doc": "NODE_DEBUG=doc doc -o README.md -n _multipart",
-    "b": "alamode src -o build -s",
-    "d": "yarn-s d1 externs",
-    "d1": "typal depack/index.js src/index.js types/index.js -c -t types/index.xml",
+    "doc": "doc -o README.md -n _multipart -d -a",
+    "d": "yarn-s template d1 externs",
+    "template": "yarn-s compile/template.js -T compile/index.js -t types",
+    "d1": "typal compile/index.js -u -t types",
     "externs": "typal types/externs.js",
-    "build": "yarn-s d b doc",
     "e": "alanode"
   },
   "files": [
@@ -43,30 +42,31 @@
     "upload"
   ],
   "author": "Anton <anton@adc.sh>",
-  "license": "MIT",
+  "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/idiocc/multer/issues"
   },
-  "homepage": "https://github.com/idiocc/multer#readme",
+  "homepage": "https://www.idio.cc",
   "devDependencies": {
-    "@contexts/http": "^1.5.0",
-    "@externs/goa": "^0.1.0",
-    "@goa/busboy": "^1.1.1",
-    "@goa/koa": "^1.1.3",
-    "@idio/dicer": "^1.0.2",
+    "@contexts/http": "^1.6.1",
+    "@externs/goa": "^1.0.1",
+    "@goa/busboy": "^1.2.0",
+    "@goa/koa": "^2.1.0",
+    "@idio/dicer": "^1.1.0",
     "@multipart/append-field": "^1.0.1",
     "@multipart/test-form-data": "^1.0.0",
-    "@typedefs/goa": "^0.0.2",
+    "@typedefs/goa": "^0.1.5",
     "@wrote/ensure-path": "^1.1.0",
     "@wrote/read": "^1.0.4",
     "@wrote/rm": "^1.1.5",
-    "alamode": "^2.3.4",
+    "alamode": "^3.3.0",
     "catchment": "^3.3.0",
-    "documentary": "^1.27.4",
+    "depack": "^1.0.1",
+    "documentary": "^1.35.8",
     "eslint-config-artdeco": "1.0.1",
     "temp-context": "^2.1.3",
-    "yarn-s": "1.1.0",
-    "zoroaster": "^4.1.1-alpha"
+    "yarn-s": "1.2.1",
+    "zoroaster": "^4.1.2"
   },
   "dependencies": {
     "text-decoding": "^1.0.0"
