--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,9 @@
       "program": "${workspaceFolder}/node_modules/.bin/zoroaster",
       "env": {
         "NODE_DEBUG": "@multipart/form-data",
+        "ALAMODE_ENV": "test-compile",
       },
+      "sourceMaps": false,
       "console": "integratedTerminal",
       "args": [
         "test/spec",
